--- a/src/app/components/product-item/product-item.component.scss
+++ b/src/app/components/product-item/product-item.component.scss
@@ -58,6 +58,14 @@ button {
     margin-right: 5px;
 }
 
+label {
+    font-size: 23px;
+}
+
+li {
+    margin-top: 10px;
+}
+
 span {
     margin: 2px;
 }
